fixed overlapping cards (#27)

--- a/frontend/src/components/common/Card/Card.css
+++ b/frontend/src/components/common/Card/Card.css
@@ -15,7 +15,7 @@
 }
 
 .card--padding-medium {
-  padding: 1.5rem;
+  padding: 0.5rem;
 }
 
 .card--padding-large {
